third_party/WebKit/Source/core/layout/ScrollAnchor.h
@@ -34,8 +34,8 @@ class CORE_EXPORT ScrollAnchor final {
   // save() and cached until the next call to clear().
   LayoutObject* anchorObject() const { return m_anchorObject; }
 
-  // Indicates that the next save() should compute a new anchor. (In certain
-  // cases the previous anchor will be reused; see comments in restore.)
+  // Indicates that the next save() should compute a new anchor for the
+  // containing scroller and all ancestor scrollers.
   void clear();
 
   // Records the anchor's location in relation to the scroller. Should be
@@ -64,6 +64,10 @@ class CORE_EXPORT ScrollAnchor final {
   DEFINE_INLINE_TRACE() { visitor->trace(m_scroller); }
 
  private:
+  // Indicates that the next save() should compute a new anchor for the
+  // containing scroller.
+  void clearSelf(bool unconditionally = false);
+
   void findAnchor();
   bool computeScrollAnchorDisablingStyleChanged();
 
